# k9-rs

./: 0-AI-MANIFEST.a2ml  Adjust.a2ml  Cargo.toml  Dust.a2ml  EXPLAINME.adoc  Intend.a2ml  Justfile  Lust.a2ml  Must.a2ml  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  TEST-NEEDS.md  TOPOLOGY.md  Trust.a2ml  eclexiaiser.toml  idrisiser.toml  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.machine_readable/: ADJUST.contractile  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/accessibility/: README.adoc
docs/compliance/: ACCESSIBILITY.adoc
idrisiser/: parser.tsig  round-trip.tsig  types.tsig
src/: error.rs  lib.rs  parser.rs  renderer.rs  types.rs
