# SPDX-License-Identifier: MPL-2.0
# (PMPL-1.0-or-later preferred; MPL-2.0 required for crates.io)

[package]
name = "k9-svc"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
description = "Parser and renderer for K9 self-validating configuration format"
repository = "https://github.com/hyperpolymath/k9-rs"
homepage = "https://github.com/hyperpolymath/k9-rs"
documentation = "https://docs.rs/k9-svc"
keywords = ["k9", "self-validating", "nickel", "configuration", "security"]
categories = ["parser-implementations", "config"]
readme = "README.adoc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = { version = "1", optional = true }
thiserror = "2"

[features]
default = []
serde_derive = ["dep:serde_derive"]
